2007-08-29  Steve Langasek <vorlon@debian.org>

	* modules/pam_rhosts/pam_rhosts_auth.c: getline returns -1 at
	EOF, not 0.  Check accordingly to fix an infinite loop.  Thanks
	to Stephan Springl <springl-rhosts@bfw-online.de> for catching
	this.

2007-08-28  Steve Langasek <vorlon@debian.org>

	* configure.in: call AC_CHECK_HEADERS instead of AC_CHECK_HEADER
	for crack.h, so we get a HAVE_CRACK_H define.
	* modules/pam_cracklib/pam_cracklib.c: don't copy around the
	cracklib dictpath into a fixed-width buffer, when we can just
	point at the existing strings; and allow users to override the
	default cracklib path with -DCRACKLIB_DICT, required for
	compatibility with cracklib 2.7.

2007-08-27  Steve Langasek <vorlon@debian.org>

	* modules/pam_limits/pam_limits.c: when building on non-Linux
	systems, give a warning only, not an error; no one seems to
	remember why this error was here in the first place, but leave
	something in that might still grab the attention of non-Linux
	users.
	Patch from Michal Suchanek <hramrach_l@centrum.cz>.
	* configure.in, modules/pam_rhosts/pam_rhosts_auth.c: check for
	the presence of net/if.h before using, required for Hurd
	compatibility.
	Patch from Igor Khavkine <i_khavki@alcor.concordia.ca>.
	* modules/pam_limits/pam_limits.c: conditionalize the use of
	RLIMIT_AS, which is not present on the Hurd.
	Patch from Igor Khavkine <i_khavki@alcor.concordia.ca>.
	* modules/pam_rhosts/pam_rhosts_auth.c: use getline() instead of
	a static buffer when available; fixes the build on systems
	without MAXHOSTNAMELEN (i.e., the Hurd).
	* modules/pam_xauth/pam_xauth.c: make sure PATH_MAX is defined
	before using it.

2007-08-26  Andrew Morgan  <morgan@kernel.org>

	* doc/man/pam.conf-syntax.xml
	Minor fixes: '\[' -> '\]'.

2007-08-25  Steve Langasek  <vorlon@debian.org>

	* doc/man/pam.conf-syntax.xml, doc/man/pam.conf.5:
	Document "new" control options conv_again and incomplete, supported
	in pam.d's extended syntax.